--- a/css/style.css
+++ b/css/style.css
@@ -202,11 +202,14 @@ body {
   background-size: cover;
   background-position: center;
   position: relative;
+  /* untuk membuat gradasi */
+  -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
+  mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
 }
 
 /* untuk buat gradasi  */
 
-.hero::after {
+/* .hero::after {
   content: "";
   display: block;
   position: absolute;
@@ -218,11 +221,17 @@ body {
     rgba(1, 1, 3, 1) 8%,
     rgba(255, 255, 255, 0) 50%
   );
-}
+} */
 
 .hero .content {
   padding: 1.4rem 7%;
-  max-width: 60rem;
+  /* max-width: 60rem; */
+  width: 100%;
+  /* supaya ada ditengah */
+  text-align: center;
+  /* supaya text nya fixed */
+  position: fixed;
+  top: 150px;
 }
 
 .hero .content h1 {
@@ -294,6 +303,10 @@ body {
 
 .about .row .about-img img {
   width: 100%;
+  -webkit-mask-image: url("../img/Menu/splash.svg");
+  -webkit-mask-size: 60%;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
 }
 
 .about .row .content {
