--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,11 @@ body {
   cursor: pointer;
 }
 
+.form-container .checkout-button.disabled {
+  background-color: #999;
+  cursor: not-allowed;
+}
+
 /* Shopping Cart End */
 
 /* end Navbar */
